2013-10-12  Carl Hetherington  <cth@carlh.net>

	* Add some missing libraries to the OS X build.

2013-10-12  Carl Hetherington  <cth@carlh.net>
	
	* Version 1.13 released.

2013-10-12  Carl Hetherington  <cth@carlh.net>

	* Fix linux static build.

2013-10-11  Carl Hetherington  <cth@carlh.net>

	* Version 1.12 released.

2013-10-11  Carl Hetherington  <cth@carlh.net>

	* Fix failure to create signer certificates
	on Windows.

2013-10-10  Carl Hetherington  <cth@carlh.net>

	* Basic snapping in the timeline.

	* Various improvements to dcpomatic_kdm.

2013-10-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.11 released.

2013-10-10  Carl Hetherington  <cth@carlh.net>

	* libdcp fix to incorrect signature digests.

2013-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.10 released.

2013-10-09  Carl Hetherington  <cth@carlh.net>

	* Add some missing Windows dependencies.

2013-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.09 released.

2013-10-09  Carl Hetherington  <cth@carlh.net>

	* Bump libdcp version to pull in speculative fix
	for AuthorizedDeviceList thumbprints in KDMs.

2013-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.08 released.

2013-10-09  Carl Hetherington  <cth@carlh.net>

	* Fix problems with crypto stuff on Windows.

2013-10-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.07 released.

2013-10-01  Carl Hetherington  <cth@carlh.net>

	* Version 1.06 released.

2013-09-19  Carl Hetherington  <cth@carlh.net>

	* Version 1.05 released.

2013-09-17  Carl Hetherington  <cth@carlh.net>

	* Version 1.04 released.

2013-09-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.03 released.

2013-09-02  Carl Hetherington  <cth@carlh.net>

	* Add missing boost datetime dependency
	to debian control files.

2013-08-30  Carl Hetherington  <cth@carlh.net>

	* Version 1.02 released.

2013-08-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.01 released.

2013-08-29  Carl Hetherington  <cth@carlh.net>
