@@ -2,6 +2,8 @@
 
 	* Add some missing libraries to the OS X build.
 
+	* Fix libltdl search path on OS X.
+
 2013-10-12  Carl Hetherington  <cth@carlh.net>
 	
 	* Version 1.13 released.
